--- a/roles/wordpress/defaults/main.yml
+++ b/roles/wordpress/defaults/main.yml
@@ -1,19 +1,20 @@
 ---
-
 # packages for LAMP
 packages_name:
   - apache2
-  - mysql-server
+  - mysql-server  # Utiliser mysql-server pour installer MySQL
   - php
   - php-mysql
   - libapache2-mod-php
   - python3-mysqldb
   - wget
+
+# services for LAMP
 services_name:
   - apache2
-  - mysql
+  - mysql  # Utiliser mysql pour démarrer le service MySQL
 
-#variables for mysql
+# Variables for MySQL
 mysql_db: "wordpress"
 mysql_user: "user1"
-mysql_password: "Azerty123456"  
+mysql_password: "Azerty123456"
