--- a/hosts.yml
+++ b/hosts.yml
@@ -1,8 +1,7 @@
 all:
   hosts:
-    root-VM-Mokrane-VM1:
-      ansible_host: 172.17.0.2
-    root-VM-Mokrane-VM2:
-      ansible_host: 172.17.0.3
-    root-VM-Mokrane-VM3:
-      ansible_host: 172.17.0.4
+    worker1:
+      ansible_host: 192.168.198.169
+    worker2:
+      ansible_host: 192.168.198.170
+ 
