--- a/roles/wordpress/defaults/main.yml
+++ b/roles/wordpress/defaults/main.yml
@@ -18,3 +18,8 @@ services_name:
 mysql_db: "wordpress"
 mysql_user: "user1"
 mysql_password: "Azerty123456"
+
+# wordpress
+
+wordpress_source: "https://wordpress.org/latest.tar.gz"
+
